--- a/source/less/extra-goods.less
+++ b/source/less/extra-goods.less
@@ -16,7 +16,7 @@
 .extra-goods__list {
   margin: 0;
   padding: 0;
-  padding-bottom: 40px;
+  padding-bottom: 37px;
   list-style: none;
   border-top: 1px solid #cdcdcd;
 }
@@ -66,11 +66,17 @@
 
   .extra-goods__title {
     position: relative;
-    top: -50px;
+    top: -25px;
     display: inline-block;
+    margin: 0;
+    margin-bottom: 55px;
     padding: 0 40px;
     font-size: 36px;
     line-height: 36px;
+  }
+
+  .extra-goods__list {
+    padding-bottom: 70px;
   }
 
   .extra-goods__item {
@@ -79,14 +85,14 @@
     align-content: space-between;
     width: 100%;
     margin-top: -1px;
-    padding: 30px 40px;
+    padding: 25px 40px 27px;
     border: 1px solid #cdcdcd;
     box-sizing: border-box;
   }
 
   .extra-goods__item-title {
     margin-right: auto;
-    margin-bottom: 28px;
+    margin-bottom: 26px;
     font-size: 20px;
     line-height: 20px;
   }
@@ -101,19 +107,19 @@
   }
 
   .extra-goods__btn {
-    padding: 12px;
+    padding: 10px;
     width: 634px;
     font-size: 16px;
   }
 
   .extra-goods__stock {
-    margin-bottom: 78px;
+    margin-bottom: 75px;
   }
 }
 
 @media (min-width: @desktop-screen) {
   .extra-goods {
-    padding-bottom: 85px;
+    padding-bottom: 5px;
   }
 
   .extra-goods__wrapper {
@@ -124,10 +130,13 @@
     width: 1220px;
   }
 
+  .extra-goods__title {
+    margin-left: -40px;
+  }
+
   .extra-goods__list {
     margin-right: auto;
     padding: 0;
-    padding-left: 42px;
     border: none;
   }
 
