--- a/source/less/slider.less
+++ b/source/less/slider.less
@@ -37,6 +37,11 @@
 }
 
 @media (min-width: @tablet-screen) {
+  .slider__img {
+    width: 100%;
+    height: auto;
+  }
+
   .slider__btn {
     padding: 4px 0;
     border-bottom: 1px dotted #bebebe;
