--- a/source/less/stock.less
+++ b/source/less/stock.less
@@ -41,7 +41,7 @@
   .stock__container {
     flex-direction: row;
     justify-content: flex-start;
-    padding: 66px 94px 76px;
+    padding: 65px 124px 75px 93px;
     background-image: url("../img/gift-photo-tablet@1x.jpg");
     background-size: contain;
   }
