Изменена сетка элемента с суммой и размеры изображений слайдера

--- a/source/less/example.less
+++ b/source/less/example.less
@@ -135,6 +135,8 @@
   }
 
   .example__sum {
+    display: flex;
+    flex-direction: column;
     margin: 0;
     margin-left: auto;
     width: 176px;
@@ -182,7 +184,9 @@
   }
 
   .example__sum {
-    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 370px;
     margin: 0;
     text-align: left;
   }
