--- a/source/less/slider.less
+++ b/source/less/slider.less
@@ -38,7 +38,7 @@
 
 @media (min-width: @tablet-screen) {
   .slider__img {
-    width: 100%;
+    width: 680px;
     height: auto;
   }
 
@@ -59,7 +59,7 @@
 
 @media (min-width: @desktop-screen) {
   .slider__img {
-    width: 100%;
+    width: 650px;
     height: 515px;
   }
 }
