--- a/source/less/nutrition-programs.less
+++ b/source/less/nutrition-programs.less
@@ -76,28 +76,31 @@
 
 .nutrition-programs__btn {
   position: relative;
+  display: inline-block;
   padding-right: 58px;
   font-family: "Oswald-reg", "Arial", sans-serif;
   color: @heading-color;
   font-size: 16px;
   line-height: 16px;
+  vertical-align: baseline;
   text-transform: uppercase;
   text-decoration: none;
 
   &::before {
     content: "";
     position: absolute;
-    top: 43%;
+    top: 50%;
     right: 30px;
     width: 17px;
     height: 3px;
     background-color: #3e4242;
+    transform: translateY(-50%);
   }
 
   &::after {
     content: "";
     position: absolute;
-    top: 23%;
+    top: 50%;
     right: 24px;
     width: 0;
     height: 0;
@@ -105,6 +108,7 @@
     border-bottom-color: transparent;
     border-top-color: transparent;
     border-right-width: 0;
+    transform: translateY(-50%);
   }
 
   &:hover::before,
@@ -190,12 +194,10 @@
     line-height: 20px;
 
     &::before {
-      top: 14px;
       right: 16px;
     }
 
     &::after {
-      top: 9px;
       right: 12px;
     }
   }
