--- a/source/less/contacts.less
+++ b/source/less/contacts.less
@@ -1,5 +1,22 @@
 .contacts {
+  position: relative;
   line-height: 20px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    right: 50%;
+    bottom: 170px;
+    z-index: 5;
+    width: 55px;
+    height: 53px;
+    background-color: transparent;
+    background-image: url("../img/map-pin.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    transform: translateX(50%);
+  }
 
   &--grey {
     background-color: @secondary-color;
@@ -36,6 +53,8 @@
 }
 
 .contacts__map {
+  position: relative;
+  z-index: 1;
   display: block;
   width: 100%;
   height: 363px;
@@ -43,6 +62,11 @@
 
 
 @media (min-width: @tablet-screen) {
+  .contacts::before {
+    width: 113px;
+    height: 106px;
+  }
+
   .contacts__info-wrapper {
     width: 632px;
     margin: 0 auto;
@@ -70,8 +94,10 @@
 }
 
 @media (min-width: @desktop-screen) {
-  .contacts {
-    position: relative;
+  .contacts::before {
+    bottom: 50%;
+    right: 336px;
+    transform: translate(0, 50%;)
   }
 
   .contacts__info-wrapper {
