Добавлен отступ снизу у блока и блочное отображение для картинок каталога

--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -1,5 +1,5 @@
 .catalog {
-  padding: 13px 0 10px;
+  padding: 13px 0 42px;
 }
 
 .catalog__wrapper {
@@ -33,6 +33,7 @@
 }
 
 .catalog__product-photo {
+  display: block;
   width: 140px;
   height: 144px;
 }
