--- a/source/less/stock.less
+++ b/source/less/stock.less
@@ -23,6 +23,9 @@
   width: 55px;
   height: 60px;
   margin-bottom: 65px;
+  background-image: url("../img/icon-gift.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .stock__info {
@@ -64,5 +67,6 @@
 
   .stock__container {
     padding-bottom: 45px;
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
   }
 }
