Добавлена переменная для цвета ошибки

--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -6,6 +6,7 @@
 @main-text-color: #444444;
 @secondary-text-color: #ffffff;
 @main-color-hover: #5eaa2f;
+@error-color: #ff8282;
 
 //размеры экрана
 @tablet-screen: 768px;
