Перенесено правило для фото в блоке примера из десктопной в планшетную версию

--- a/source/less/example.less
+++ b/source/less/example.less
@@ -143,6 +143,14 @@
     font-size: 20px;
     text-align: right;
   }
+
+  .example__photo {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 650px;
+  }
 }
 
 @media (min-width: @desktop-screen) {
@@ -189,13 +197,5 @@
     width: 370px;
     margin: 0;
     text-align: left;
-  }
-
-  .example__photo {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 650px;
   }
 }
