--- a/source/less/slider.less
+++ b/source/less/slider.less
@@ -26,6 +26,13 @@
   margin: 0 auto;
 }
 
+.slider__controls {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 200px;
+}
+
 .slider__btn {
   border: none;
   font-family: "Oswald-reg", "Arial", sans-serif;
@@ -36,7 +43,36 @@
   background-color: transparent;
 }
 
+.slider__togler {
+  position: relative;
+  width: 84px;
+}
+
+.slider__togler-scale {
+  width: 100%;
+  height: 14px;
+  border: 1px solid #cdcdcd;
+  border-radius: 6px;
+  background-color: #ffffff;
+  box-sizing: border-box;
+}
+
+.slider__togler-control {
+  position: absolute;
+  top: 50%;
+  left: 7px;
+  width: 35px;
+  height: 6px;
+  border-radius: 4px;
+  background-color: @main-color;
+  transform: translateY(-50%);
+}
+
 @media (min-width: @tablet-screen) {
+  .slider__list {
+    margin-bottom: 43px;
+  }
+
   .slider__img {
     width: 680px;
     height: auto;
@@ -55,9 +91,60 @@
       border-bottom: none;
     }
   }
+
+  .slider__controls {
+    width: 574px;
+  }
+
+  .slider__togler {
+    width: 428px;
+  }
+
+  .slider__togler-scale {
+    height: 6px;
+    background-color: #dcdcdc;
+    border: none;
+    border-radius: 3px;
+  }
+
+  .slider__togler-control {
+    left: 48%;
+    width: 34px;
+    height: 34px;
+    border: 1px solid #cdcdcd;
+    border-radius: 50%;
+    background-color: #ffffff;
+    box-shadow: 0 2px 5px rgba(#000000, 0.15);
+    box-sizing: border-box;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background-color: @main-color;
+      transform: translate(-50%, -50%);
+    }
+
+    &:hover {
+      box-shadow: 0 3px 5px rgba(#000000, 0.25);
+    }
+
+    &:active {
+      border: 2px solid @main-color;
+      box-shadow: 0 4px 5px rgba(#000000, 0.3);
+    }
+  }
 }
 
 @media (min-width: @desktop-screen) {
+  .slider {
+    padding-top: 10px;
+  }
+
   .slider__img {
     width: 650px;
     height: 515px;
