--- a/source/less/contacts.less
+++ b/source/less/contacts.less
@@ -96,7 +96,7 @@
   .contacts::before {
     bottom: 50%;
     right: 336px;
-    transform: translate(0, 50%;)
+    transform: translate(0, 50%);
   }
 
   .contacts__info-wrapper {
