Исправлены отступы, размеры и параметры шрифтов для блоков с рекламой, контактов и кнопки

--- a/source/less/contacts.less
+++ b/source/less/contacts.less
@@ -62,6 +62,7 @@
 
 @media (min-width: @tablet-screen) {
   .contacts::before {
+    bottom: 150px;
     width: 113px;
     height: 106px;
   }
@@ -95,7 +96,7 @@
 @media (min-width: @desktop-screen) {
   .contacts::before {
     bottom: 50%;
-    right: 336px;
+    right: 325px;
     transform: translate(0, 50%);
   }
 
@@ -110,7 +111,7 @@
 
   .contacts__info {
     position: absolute;
-    top: 95px;
+    top: 100px;
     left: 0;
     z-index: 5;
     width: 570px;
