Исправлены отступы у блоков -Как использовать- и -Акция-

--- a/source/less/stock.less
+++ b/source/less/stock.less
@@ -44,7 +44,7 @@
   .stock__container {
     flex-direction: row;
     justify-content: flex-start;
-    padding: 65px 124px 75px 93px;
+    padding: 65px 120px 75px 93px;
     background-image: url("../img/gift-photo-tablet@1x.jpg");
     background-size: contain;
   }
@@ -55,6 +55,7 @@
   }
 
   .stock__info {
+    width: 170px;
     line-height: 20px;
     text-align: left;
   }
@@ -66,7 +67,7 @@
   }
 
   .stock__container {
-    padding-bottom: 45px;
+    padding-bottom: 40px;
     background-image: url("../img/gift-photo-desktop@1x.jpg");
   }
 }
