--- a/source/less/usage.less
+++ b/source/less/usage.less
@@ -1,3 +1,7 @@
+.usage {
+  padding-bottom: 23px;
+}
+
 .usage__wrapper {
   width: 280px;
   margin: 0 auto;
@@ -11,7 +15,6 @@
 .usage__list {
   width: 100%;
   margin: 0;
-  margin-bottom: 42px;
   padding: 0;
   list-style: none;
 }
@@ -60,6 +63,7 @@
 
 @media (min-width: @tablet-screen) {
   .usage {
+    padding: 0;
     border-bottom: 1px solid #e6e6e6;
   }
 
