--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -1,5 +1,5 @@
 .catalog {
-  padding: 13px 0 42px;
+  padding: 17px 0 42px;
 }
 
 .catalog__wrapper {
@@ -27,7 +27,7 @@
   justify-content: space-between;
   width: 100%;
   min-height: 208px;
-  padding: 0 20px 25px;
+  padding: 0 20px 23px;
   border-bottom: 1px solid #e6e6e6;
   box-sizing: border-box;
 }
@@ -82,6 +82,7 @@
 
 .catalog__product-btn {
   width: 100%;
+  padding-bottom: 10px;
 }
 
 .catalog__all-products {
