--- a/source/less/extra-goods.less
+++ b/source/less/extra-goods.less
@@ -8,11 +8,8 @@
 }
 
 .extra-goods__title {
-  position: relative;
-  top: -37px;
-  left: -20px;
   display: inline-block;
-  margin-bottom: 30px;
+  margin: -18px 0 35px -20px;
   padding: 0 20px;
   font-family: "Oswald-reg", "Arial", sans-serif;
   font-size: 24px;
@@ -34,7 +31,7 @@
 .extra-goods__item {
   display: flex;
   flex-direction: column;
-  padding: 14px 0 17px;
+  padding: 14px 0;
   border-bottom: 1px solid #cdcdcd;
 }
 
@@ -71,6 +68,7 @@
   }
 
   .extra-goods__title {
+    position: relative;
     top: -25px;
     left: 0;
     margin: 0;
@@ -124,7 +122,7 @@
 
 @media (min-width: @desktop-screen) {
   .extra-goods {
-    padding-bottom: 5px;
+    padding-bottom: 10px;
   }
 
   .extra-goods__wrapper {
@@ -147,9 +145,9 @@
 
   .extra-goods__item {
     flex-wrap: nowrap;
-    align-items: center;
+    align-items: baseline;
     width: 896px;
-    padding: 15px 0;
+    padding: 15px 0 16px;
     border-left: none;
     border-right: none;
   }
@@ -162,6 +160,11 @@
     width: 287px;
     margin: 0;
     margin-right: 40px;
+  }
+
+  .extra-goods__price {
+    width: 46px;
+    text-align: center;
   }
 
   .extra-goods__btn {
