Добавлены переменные для повышенной плотности пикселей в dpi и ddpx

--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -11,3 +11,7 @@
 //размеры экрана
 @tablet-screen: 768px;
 @desktop-screen: 1440px;
+
+//плотность пикселей
+@dpi-res: 144dpi;
+@ddpx-res: 1.5ddpx;
