Исправлен отступ и изменен способ скрытия кнопки меню при отключенном js

--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -92,14 +92,13 @@
         background-color: #000000;
         transform: rotate(-90deg);
       }
-
-      &--opened .page-header__nav-list {
-        display: block;
-      }
+    }
+    &--opened .page-header__nav-list {
+      display: block;
     }
 
     &--no-js .burger-btn {
-      display: none;
+      visibility: hidden;
     }
   }
 }
