--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -25,7 +25,7 @@
   background-position: center;
   background-size: cover;
 
-  @media(min-resolution: @dpi-res), (min-resolution: @ddpx-res) {
+  @media (min-resolution: @dpi-res), (min-resolution: @dppx-res) {
     background-image: url("../img/index-background-mobile@2x.jpg");
   }
 }
@@ -69,7 +69,7 @@
     background-position: 50% 100%;
     background-size: 709px 609px;
 
-    @media(min-resolution: @dpi-res), (min-resolution: @ddpx-res) {
+    @media (min-resolution: @dpi-res), (min-resolution: @dppx-res) {
       background-image: url("../img/index-can-tablet@2x.jpg");
     }
   }
@@ -131,10 +131,10 @@
       552px 499px,
       50%;
 
-    @media(min-resolution: @dpi-res), (min-resolution: @ddpx-res) {
+    @media (min-resolution: @dpi-res), (min-resolution: @dppx-res) {
       background-image:
-      url("../img/index-can-desktop@2x.png"),
-      url("../img/index-background-desktop@2x.jpg");
+       url("../img/index-can-desktop@2x.png"),
+       url("../img/index-background-desktop@2x.jpg");
     }
   }
 
