--- a/source/less/usage.less
+++ b/source/less/usage.less
@@ -42,7 +42,7 @@
   &--leaf {
     background-image: url("../img/advantage-leaf@1x.png");
 
-    @media(min-resolution: @dpi-res), (min-resolution: @ddpx-res) {
+    @media (min-resolution: @dpi-res), (min-resolution: @dppx-res) {
       background-image: url("../img/advantage-leaf@2x.png");
     }
   }
@@ -50,7 +50,7 @@
   &--powder {
     background-image: url("../img/advantage-powder@1x.png");
 
-    @media(min-resolution: @dpi-res), (min-resolution: @ddpx-res) {
+    @media (min-resolution: @dpi-res), (min-resolution: @dppx-res) {
       background-image: url("../img/advantage-powder@2x.png");
     }
   }
@@ -58,7 +58,7 @@
   &--dinning {
     background-image: url("../img/advantage-dining@1x.png");
 
-    @media(min-resolution: @dpi-res), (min-resolution: @ddpx-res) {
+    @media (min-resolution: @dpi-res), (min-resolution: @dppx-res) {
       background-image: url("../img/advantage-dining@2x.png");
     }
   }
@@ -66,7 +66,7 @@
   &--clock {
     background-image: url("../img/advantage-clock@1x.png");
 
-    @media(min-resolution: @dpi-res), (min-resolution: @ddpx-res) {
+    @media (min-resolution: @dpi-res), (min-resolution: @dppx-res) {
       background-image: url("../img/advantage-clock@2x.png");
     }
   }
