--- a/source/less/program-selection.less
+++ b/source/less/program-selection.less
@@ -56,6 +56,7 @@
   text-align: left;
   color: #222222;
   box-sizing: border-box;
+  fill: @heading-color;
 }
 
 .program-selection__required-field {
@@ -85,8 +86,8 @@
     outline: 2px solid @main-text-color;
   }
 
-  &:active ~ svg path,
-  &:focus ~ svg path {
+  &:active ~ svg,
+  &:focus ~ svg {
     fill: @main-color;
   }
 
@@ -94,7 +95,7 @@
     outline: 2px solid @error-color;
   }
 
-  &:invalid ~ svg path {
+  &:invalid ~ svg {
     fill: @error-color;
   }
 
@@ -180,6 +181,7 @@ input[type="checkbox"]:hover ~ .program-selection__checkbox {
 
 .program-selection__owner-data input {
   width: 195px;
+  padding-right: 42px;
 }
 
 .program-selection__comment {
@@ -352,6 +354,10 @@ input[type="checkbox"]:checked ~ .program-selection__checkbox::after {
     width: 100%;
     margin-bottom: 50px;
     border-top: 3px solid @main-color;
+  }
+
+  .program-selection__owner-data input {
+    padding-right: 63px;
   }
 
   .program-selection__fieldset-title:not(.visually-hidden) {
