Изменены размеры, отступы и переносы для блоков -Шапка-, -Реклама-, -Использование- и -Каталог-

--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -224,7 +224,7 @@
     width: 326px;
     min-height: 433px;
     padding: 165px 37px 40px;
-    margin: 0 29px;
+    margin: 0 29px 140px;
     border: 1px solid #cdcdcd;
 
     &::after,
