--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -134,10 +134,13 @@
   .page-header__nav-list {
     display: flex;
     justify-content: space-between;
-    width: 440px;
+    flex-wrap: wrap;
+    width: 470px;
+    margin: 0 -15px;
   }
 
   .page-header__menu-item {
+    margin: 0 15px;
     padding: 0;
     border: none;
   }
@@ -166,7 +169,7 @@
   }
 
   .page-header__nav-list {
-    width: 480px;
+    width: 510px;
   }
 
   .page-header__menu-link {
