--- a/source/less/usage.less
+++ b/source/less/usage.less
@@ -81,6 +81,7 @@
 @media (min-width: @tablet-screen) {
   .usage {
     padding: 0;
+    padding-bottom: 60px;
     border-bottom: 1px solid #e6e6e6;
   }
 
@@ -97,8 +98,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-content: space-between;
-    min-height: 545px;
-    margin-bottom: 60px;
+    min-height: 605px;
+    margin-bottom: -60px;
     counter-reset: item-count;
   }
 
@@ -107,6 +108,7 @@
     min-height: 230px;
     margin: 0;
     margin-right: 80px;
+    margin-bottom: 60px;
     padding: 0;
     padding-top: 115px;
 
